app_teste/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: devopsbootcamp-app
  labels:
    name: devopsbootcamp-app
