app_teste/01-NginxApp1-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopsbootcamp-app
  namespace: devopsbootcamp-app
  labels:
    app: devopsbootcamp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopsbootcamp-app
  template:
    metadata:
      labels:
        app: devopsbootcamp-app
    spec:
      containers:
        - name: devopsbootcamp-app
          image: iesodias/bootcampapp:latest
          ports:
            - containerPort: 5000
