app_teste/02-NginxApp1-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: devopsbootcamp-app
  labels:
    app: devopsbootcamp-app
spec:
  type: ClusterIP
  selector:
    app: devopsbootcamp-app
  ports:
    - port: 80
      targetPort: 5000
