app_teste/03-Ingress-Basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsbootcamp-app
  namespace: devopsbootcamp-app
  annotations:
    kubernetes.io/ingress.class: nginx
# Config para o AKS
spec:  
  rules:
  - http:
      paths:
      - path: /bootcamp/app1/
        pathType: Prefix
        backend:
          service:
            name: devopsbootcamp-app
            port: 
              number: 80
#Config para o Kind
# spec:  
#   rules:
#   - host: "kubernetes.docker.internal"
#     http:
#       paths:
#       - path: /bootcamp/app1/
#         pathType: Prefix
#         backend:
#           service:
#             name: devopsbootcamp-app
#             port: 
#               number: 80
